added jupyter notebook with download and plot
add binder links and required files

added function docstrings

added utility function for file and download management

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 *.pyc
 *.m~
 *.m~~
- 
+
 # Packages #
 ############
 *.7z
@@ -20,7 +20,7 @@
 *.rar
 *.tar
 *.zip
- 
+
 # Logs and databases #
 ######################
 *.log
@@ -30,6 +30,7 @@
 *.gmtdefaults4
 .RData
 .Rhistory
+__pycache__
 
 # OS generated files #
 ######################
@@ -72,3 +73,10 @@ Thumbs.db
 *.mtc0
 *.sw*
 *.hidden
+None*.png
+*.gfc
+
+# Jupyter Checkpoints #
+#######################
+.ipynb_checkpoints
+Untitled.ipynb
