ci: add gdal and hdf5

--- a/.github/workflows/python-request.yml
+++ b/.github/workflows/python-request.yml
@@ -36,7 +36,8 @@ jobs:
         SQLITE3_LIBS: "-L/usr/local/lib -lsqlite3"
       run: |
         sudo apt-get update
-        sudo apt-get install libnetcdf-dev libgeos-dev
+        sudo apt-get install gdal-bin libgdal-dev libgeos-dev
+        sudo apt-get install libhdf5-dev libnetcdf-dev libgeos-dev
         sudo apt-get install libstdc++6 libxml2-dev libxslt1-dev libsqlite3-dev
         cd ${RUNNER_TEMP}
         wget -q https://download.osgeo.org/proj/proj-${PROJ_VERSION}.tar.gz
@@ -60,6 +61,8 @@ jobs:
         sudo projsync --system-directory --all
         pip install --upgrade pip
         pip install flake8 pytest pytest-cov numpy cython
+        export CPLUS_INCLUDE_PATH=/usr/include/gdal
+        export C_INCLUDE_PATH=/usr/include/gdal
         pip install git+https://github.com/SciTools/cartopy.git
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Install dependencies for MacOS
@@ -67,6 +70,8 @@ jobs:
       run: |
         brew install proj
         brew install geos
+        brew install gdal
+        brew install hdf5
         brew install netcdf
         brew install libxml2
         brew install libxslt
