--- a/doc/environment.yml
+++ b/doc/environment.yml
@@ -19,8 +19,7 @@ dependencies:
   - python>=3.6
   - pyyaml
   - sphinx
-  - sphinx-argparse
   - sphinx_rtd_theme
-  - texlive-core
   - pip:
+     - sphinx-argparse>=0.4
      - ..
