--- a/doc/environment.yml
+++ b/doc/environment.yml
@@ -9,14 +9,11 @@ dependencies:
   - graphviz
   - lxml
   - markupsafe==2.0.1
-  - matplotlib
-  - netCDF4
-  - notebook
   - numpy
   - numpydoc
   - pip
-  - pyproj
   - python>=3.6
+  - python-dateutil
   - pyyaml
   - sphinx
   - sphinx_rtd_theme
